--- a/language_tranlation.ipynb
+++ b/language_tranlation.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Language Translation\n",
-    "In this project, you’re going to take a peek into the realm of neural network machine translation.  You’ll be training a sequence to sequence model on a dataset of English and French sentences that can translate new sentences from English to French.\n",
+    "In this project, building a neural network machine translation and training a sequence to sequence model on a dataset of English and French sentences that can translate new sentences from English to French.\n",
     "## Get the Data\n",
     "Since translating the whole language of English to French will take lots of time to train, we have provided you with a small portion of the English corpus."
    ]
@@ -799,7 +799,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -1174,14 +1176,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Imperfect Translation\n",
-    "You might notice that some sentences translate better than others.  Since the dataset you're using only has a vocabulary of 227 English words of the thousands that you use, you're only going to see good results using these words.  For this project, you don't need a perfect translation. However, if you want to create a better translation model, you'll need better data.\n",
-    "\n",
-    "You can train on the [WMT10 French-English corpus](http://www.statmt.org/wmt10/training-giga-fren.tar).  This dataset has more vocabulary and richer in topics discussed.  However, this will take you days to train, so make sure you've a GPU and the neural network is performing well on dataset we provided.  Just make sure you play with the WMT10 corpus after you've submitted this project.\n",
-    "## Submitting This Project\n",
-    "When submitting this project, make sure to run all the cells before saving the notebook. Save the notebook file as \"dlnd_language_translation.ipynb\" and save it as a HTML file under \"File\" -> \"Download as\". Include the \"helper.py\" and \"problem_unittests.py\" files in your submission."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
